compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_function_type_parameter_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1406
expression: "fn identity(value: someType) { value }"
snapshot_kind: text
---
----- SOURCE CODE
fn identity(value: someType) { value }

----- ERROR
error: Invalid type variable name
  ┌─ /src/one/two.gleam:1:20
  │
1 │ fn identity(value: someType) { value }
  │                    ^^^^^^^^ This is not a valid type variable name

Hint: Type variable names start with a lowercase letter and contain a-z,
0-9, or _.
Try: some_type
